--- a/2021/aoc_helper/submissions.yaml
+++ b/2021/aoc_helper/submissions.yaml
@@ -57,3 +57,18 @@
       \ Day 4! You can [Shareon\n  Twitter\nMastodon] this victory or [Return to Your\
       \ Advent Calendar]."
     solution: '13912'
+'5':
+  '1':
+    '16518': That's not the right answer.  If you're stuck, make sure you're using
+      the full input data; there are also some general tips on the about page, or
+      you can ask for hints on the subreddit.  Please wait one minute before trying
+      again. (You guessed 16518.) [Return to Day 5]
+    '5145': That's the right answer!  You are one gold star closer to finding the
+      sleigh keys. [Continue to Part Two]
+    solution: '5145'
+  '2':
+    '16518': "That's the right answer!  You are one gold star closer to finding the\
+      \ sleigh keys. You got rank 865 on this star's leaderboard.You have completed\
+      \ Day 5! You can [Shareon\n  Twitter\nMastodon] this victory or [Return to Your\
+      \ Advent Calendar]."
+    solution: '16518'
