--- a/2021/aoc_helper/submissions.yaml
+++ b/2021/aoc_helper/submissions.yaml
@@ -72,3 +72,13 @@
       \ Day 5! You can [Shareon\n  Twitter\nMastodon] this victory or [Return to Your\
       \ Advent Calendar]."
     solution: '16518'
+'6':
+  '1':
+    '362740': That's the right answer!  You are one gold star closer to finding the
+      sleigh keys. [Continue to Part Two]
+    solution: '362740'
+  '2':
+    '1644874076764': "That's the right answer!  You are one gold star closer to finding\
+      \ the sleigh keys.You have completed Day 6! You can [Shareon\n  Twitter\nMastodon]\
+      \ this victory or [Return to Your Advent Calendar]."
+    solution: '1644874076764'
