--- a/2021/aoc_helper/submissions.yaml
+++ b/2021/aoc_helper/submissions.yaml
@@ -82,3 +82,15 @@
       \ the sleigh keys.You have completed Day 6! You can [Shareon\n  Twitter\nMastodon]\
       \ this victory or [Return to Your Advent Calendar]."
     solution: '1644874076764'
+'7':
+  '1':
+    '344138': That's the right answer!  You are one gold star closer to finding the
+      sleigh keys. You got rank 866 on this star's leaderboard. [Continue to Part
+      Two]
+    solution: '344138'
+  '2':
+    '94862124': "That's the right answer!  You are one gold star closer to finding\
+      \ the sleigh keys. You got rank 491 on this star's leaderboard.You have completed\
+      \ Day 7! You can [Shareon\n  Twitter\nMastodon] this victory or [Return to Your\
+      \ Advent Calendar]."
+    solution: '94862124'
