--- a/2021/aoc_helper/submissions.yaml
+++ b/2021/aoc_helper/submissions.yaml
@@ -94,3 +94,14 @@
       \ Day 7! You can [Shareon\n  Twitter\nMastodon] this victory or [Return to Your\
       \ Advent Calendar]."
     solution: '94862124'
+'8':
+  '1':
+    '445': That's the right answer!  You are one gold star closer to finding the sleigh
+      keys. [Continue to Part Two]
+    solution: '445'
+  '2':
+    '1043101': "That's the right answer!  You are one gold star closer to finding\
+      \ the sleigh keys. You got rank 686 on this star's leaderboard.You have completed\
+      \ Day 8! You can [Shareon\n  Twitter\nMastodon] this victory or [Return to Your\
+      \ Advent Calendar]."
+    solution: '1043101'
