--- a/2021/aoc_helper/submissions.yaml
+++ b/2021/aoc_helper/submissions.yaml
@@ -24,6 +24,18 @@
       \ the sleigh keys.You have completed Day 10! You can [Shareon\n  Twitter\nMastodon]\
       \ this victory or [Return to Your Advent Calendar]."
     solution: '4038824534'
+'11':
+  '1':
+    '1637': That's the right answer!  You are one gold star closer to finding the
+      sleigh keys. You got rank 749 on this star's leaderboard. [Continue to Part
+      Two]
+    solution: '1637'
+  '2':
+    '242': "That's the right answer!  You are one gold star closer to finding the\
+      \ sleigh keys. You got rank 629 on this star's leaderboard.You have completed\
+      \ Day 11! You can [Shareon\n  Twitter\nMastodon] this victory or [Return to\
+      \ Your Advent Calendar]."
+    solution: '242'
 '2':
   '1':
     '1383564': That's the right answer!  You are one gold star closer to finding the
