--- a/2021/aoc_helper/inputs.yaml
+++ b/2021/aoc_helper/inputs.yaml
@@ -2105,6 +2105,30 @@
   2321265735
   2857275182
   4821156644
+"12": |-
+  QR-da
+  QR-end
+  QR-al
+  start-op
+  zh-iw
+  zh-start
+  da-PF
+  op-bj
+  iw-QR
+  end-HR
+  bj-PF
+  da-LY
+  op-PF
+  bj-iw
+  end-da
+  bj-zh
+  HR-iw
+  zh-op
+  zh-PF
+  HR-bj
+  start-PF
+  HR-da
+  QR-bj
 "2": |-
   forward 8
   forward 3
