--- a/2021/aoc_helper/inputs.yaml
+++ b/2021/aoc_helper/inputs.yaml
@@ -2989,6 +2989,109 @@
   fold along y=27
   fold along y=13
   fold along y=6
+"14": |-
+  OHFNNCKCVOBHSSHONBNF
+
+  SV -> O
+  KP -> H
+  FP -> B
+  VP -> V
+  KN -> S
+  KS -> O
+  SB -> K
+  BS -> K
+  OF -> O
+  ON -> S
+  VS -> F
+  CK -> C
+  FB -> K
+  CH -> K
+  HS -> H
+  PO -> F
+  NP -> N
+  FH -> C
+  FO -> O
+  FF -> C
+  CO -> K
+  NB -> V
+  PP -> S
+  BB -> N
+  HH -> B
+  KK -> H
+  OP -> K
+  OS -> V
+  KV -> F
+  VH -> F
+  OB -> S
+  CN -> H
+  SF -> K
+  SN -> P
+  NF -> H
+  HB -> V
+  VC -> S
+  PS -> P
+  NK -> B
+  CV -> P
+  BC -> S
+  NH -> K
+  FN -> P
+  SH -> F
+  FK -> P
+  CS -> O
+  VV -> H
+  OC -> F
+  CC -> N
+  HK -> N
+  FS -> P
+  VF -> B
+  SS -> V
+  PV -> V
+  BF -> V
+  OV -> C
+  HO -> F
+  NC -> F
+  BN -> F
+  HC -> N
+  KO -> P
+  KH -> F
+  BV -> S
+  SK -> F
+  SC -> F
+  VN -> V
+  VB -> V
+  BH -> O
+  CP -> K
+  PK -> K
+  PB -> K
+  FV -> S
+  HN -> K
+  PH -> B
+  VK -> B
+  PC -> H
+  BO -> H
+  SP -> V
+  NS -> B
+  OH -> N
+  KC -> H
+  HV -> F
+  HF -> B
+  HP -> S
+  CB -> P
+  PN -> S
+  BK -> K
+  PF -> N
+  SO -> P
+  CF -> B
+  VO -> C
+  OO -> K
+  FC -> F
+  NV -> F
+  OK -> K
+  NN -> O
+  NO -> O
+  BP -> O
+  KB -> O
+  KF -> O
 "2": |-
   forward 8
   forward 3
