--- a/2021/aoc_helper/submissions.yaml
+++ b/2021/aoc_helper/submissions.yaml
@@ -62,10 +62,24 @@
       (You guessed 786.) [Return to Day 13]
     solution: '684'
   '2':
-    JRZBLGKH: "That's the right answer!  You are one gold star closer to finding\
-      \ the sleigh keys.You have completed Day 13! You can [Shareon\n  Twitter\nMastodon]\
+    JRZBLGKH: "That's the right answer!  You are one gold star closer to finding the\
+      \ sleigh keys.You have completed Day 13! You can [Shareon\n  Twitter\nMastodon]\
       \ this victory or [Return to Your Advent Calendar]."
     solution: JRZBLGKH
+'14':
+  '1':
+    '2590': That's the right answer!  You are one gold star closer to finding the
+      sleigh keys. [Continue to Part Two]
+    solution: '2590'
+  '2':
+    '265': That's not the right answer.  If you're stuck, make sure you're using the
+      full input data; there are also some general tips on the about page, or you
+      can ask for hints on the subreddit.  Please wait one minute before trying again.
+      (You guessed 265.) [Return to Day 14]
+    '2875665202438': "That's the right answer!  You are one gold star closer to finding\
+      \ the sleigh keys.You have completed Day 14! You can [Shareon\n  Twitter\nMastodon]\
+      \ this victory or [Return to Your Advent Calendar]."
+    solution: '2875665202438'
 '2':
   '1':
     '1383564': That's the right answer!  You are one gold star closer to finding the
