--- a/2021/aoc_helper/submissions.yaml
+++ b/2021/aoc_helper/submissions.yaml
@@ -80,6 +80,29 @@
       \ the sleigh keys.You have completed Day 14! You can [Shareon\n  Twitter\nMastodon]\
       \ this victory or [Return to Your Advent Calendar]."
     solution: '2875665202438'
+'15':
+  '1':
+    '198': That's not the right answer.  If you're stuck, make sure you're using the
+      full input data; there are also some general tips on the about page, or you
+      can ask for hints on the subreddit.  Please wait one minute before trying again.
+      (You guessed 198.) [Return to Day 15]
+    '462': That's the right answer!  You are one gold star closer to finding the sleigh
+      keys. You got rank 451 on this star's leaderboard. [Continue to Part Two]
+    '469': That's not the right answer.  If you're stuck, make sure you're using the
+      full input data; there are also some general tips on the about page, or you
+      can ask for hints on the subreddit.  Please wait one minute before trying again.
+      (You guessed 469.) [Return to Day 15]
+    solution: '462'
+  '2':
+    '2292': That's not the right answer.  If you're stuck, make sure you're using
+      the full input data; there are also some general tips on the about page, or
+      you can ask for hints on the subreddit.  Please wait one minute before trying
+      again. (You guessed 2292.) [Return to Day 15]
+    '2846': "That's the right answer!  You are one gold star closer to finding the\
+      \ sleigh keys. You got rank 659 on this star's leaderboard.You have completed\
+      \ Day 15! You can [Shareon\n  Twitter\nMastodon] this victory or [Return to\
+      \ Your Advent Calendar]."
+    solution: '2846'
 '2':
   '1':
     '1383564': That's the right answer!  You are one gold star closer to finding the
