--- a/2021/aoc_helper/submissions.yaml
+++ b/2021/aoc_helper/submissions.yaml
@@ -141,6 +141,16 @@
       on the about page, or you can ask for hints on the subreddit.  Please wait one
       minute before trying again. (You guessed 4815.) [Return to Day 18]
     solution: '4756'
+'19':
+  '1':
+    '323': That's the right answer!  You are one gold star closer to finding the sleigh
+      keys. [Continue to Part Two]
+    solution: '323'
+  '2':
+    '10685': "That's the right answer!  You are one gold star closer to finding the\
+      \ sleigh keys.You have completed Day 19! You can [Shareon\n  Twitter\nMastodon]\
+      \ this victory or [Return to Your Advent Calendar]."
+    solution: '10685'
 '2':
   '1':
     '1383564': That's the right answer!  You are one gold star closer to finding the
