--- a/2021/aoc_helper/inputs.yaml
+++ b/2021/aoc_helper/inputs.yaml
@@ -5183,6 +5183,9 @@
   .....##....#.##.##.#.##....#.#.##.##......####.##..##.#....#..#.##.###.#..#....##.#..#.#.#.#.##...#.
   .#.#..#...#..#..#.....#####...#####..##.#.##.#.#....##..##............#.##...######..#.###..#...#..#
   #.#####.##.#.#.....#...#..#.#.#....#....#..##.#..#..#....####.#...#.##.####.#.##.#...#.#.#.#..#...##
+"21": |-
+  Player 1 starting position: 9
+  Player 2 starting position: 4
 "3": |-
   000110011011
   010011010000
