--- a/2021/aoc_helper/submissions.yaml
+++ b/2021/aoc_helper/submissions.yaml
@@ -218,6 +218,16 @@
       tips on the about page, or you can ask for hints on the subreddit.  Please wait
       one minute before trying again. (You guessed 1631057934.) [Return to Day 22]
     solution: '1265621119006734'
+'23':
+  '1':
+    '11536': That's the right answer!  You are one gold star closer to finding the
+      sleigh keys. [Continue to Part Two]
+    solution: '11536'
+  '2':
+    '55136': "That's the right answer!  You are one gold star closer to finding the\
+      \ sleigh keys.You have completed Day 23! You can [Shareon\n  Twitter\nMastodon]\
+      \ this victory or [Return to Your Advent Calendar]."
+    solution: '55136'
 '3':
   '1':
     '3923414': That's the right answer!  You are one gold star closer to finding the
