--- a/2021/aoc_helper/inputs.yaml
+++ b/2021/aoc_helper/inputs.yaml
@@ -5613,6 +5613,259 @@
   ###C#A#B#D###
     #C#A#D#B#
     #########
+"24": |-
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 1
+  add x 13
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 6
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 1
+  add x 11
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 11
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 1
+  add x 12
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 5
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 1
+  add x 10
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 6
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 1
+  add x 14
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 8
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 26
+  add x -1
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 14
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 1
+  add x 14
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 9
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 26
+  add x -16
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 4
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 26
+  add x -8
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 7
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 1
+  add x 12
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 13
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 26
+  add x -16
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 11
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 26
+  add x -13
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 11
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 26
+  add x -6
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 6
+  mul y x
+  add z y
+  inp w
+  mul x 0
+  add x z
+  mod x 26
+  div z 26
+  add x -6
+  eql x w
+  eql x 0
+  mul y 0
+  add y 25
+  mul y x
+  add y 1
+  mul z y
+  mul y 0
+  add y w
+  add y 1
+  mul y x
+  add z y
 "3": |-
   000110011011
   010011010000
