--- a/2021/aoc_helper/submissions.yaml
+++ b/2021/aoc_helper/submissions.yaml
@@ -238,6 +238,16 @@
       \ the sleigh keys.You have completed Day 24! You can [Shareon\n  Twitter\nMastodon]\
       \ this victory or [Return to Your Advent Calendar]."
     solution: '11931881141161'
+'25':
+  '1':
+    '320': That's not the right answer; your answer is too low.  If you're stuck,
+      make sure you're using the full input data; there are also some general tips
+      on the about page, or you can ask for hints on the subreddit.  Please wait one
+      minute before trying again. (You guessed 320.) [Return to Day 25]
+    '321': That's the right answer!  You are one gold star closer to finding the sleigh
+      keys. [Continue to Part Two]
+    solution: '321'
+  '2': {}
 '3':
   '1':
     '3923414': That's the right answer!  You are one gold star closer to finding the
