--- a/2021/aoc_helper/inputs.yaml
+++ b/2021/aoc_helper/inputs.yaml
@@ -5866,6 +5866,144 @@
   add y 1
   mul y x
   add z y
+"25": |-
+  >.v..>.>.>>.v>vv.vv>v.v...v>>..v.v.>>.>...v>.>....v>>.v.....vv.vvvv>...v.>.v>..v>>..>.v.v>.....vvv.....>....v>.v..>..>.>>v.......v.>....>..
+  v.>.>.>.v.v.v.v.>..v.v.v.v...vv..>>v>vv.v>..>>..>.>v..>......v....>..v...vv..v.vv.>.vv>v.>.v>..>>....>..>....vv..v..>.>v>>..v>..>...>..>>v>
+  v..>>v...>>>.>>.>vv.>...>.vv>v.v>vv.v>.vv>.v>v.v.>.v.v.>......v>.>>..v>v.v...vv>v...vv.>>..v>v.vv.>v..v.>>.vv.....>.>vv.>>>>v.....>v.>>..>.
+  >.>v..>..>>>.>>..>.v.....v>v...v>.>..v.>vvv..>>v...v...v>....v.>.>.v>.v..>>v..>.>......>.v.vvv..>vvv...v.......v..>>..>...>v..v..>....>.v>.
+  ...>v>.v.>v>>...>vv.v>v...>vv.v>.vv>..v..>..vv..>>>>v>...>....vv...v.>....v.v.>.>...>vv>v.>.v..>>.v.v>vv>...>>>v..>>.v.....v>..>>v>.....>>>
+  >.v.>v>>.....>..v.........v..vvv>>..v..>v.v.>vv.....>.>.v>.>>v........vvv......>vv..v...........v>>.>.v.....>....>.>.>.>..>.v..>v>>.>>>.>..
+  .vvvvv>vv..vv.>.v.>...v>>>>vv>>>..vv..>>.......>>.vv>vv>v..>...vv...>...v>.>>....>.v....>.v.vv>...>vv..v.>..>>>v>>.>.......vvv>..>...v.v..>
+  ..>..v>>....v.>v.vvv>.....v>vvv...>v...v>...v.>......>.......>..v.v>>.>.>..v>.vv....v.>v>.vvv>>>..v....v.v>....v>.v>..v.v....>>....v>>...v.
+  ..vvv>.>.v.v....>..v.>v.v>>...v.v>v.....vv>>v>vv...>.>vv.>...v>.>.>.>.>vvv>.>..v..vv>......v..>>.......v>>v.vv>.v>..v>.vv....v...>..vvv.>v.
+  ..v..v.v.v.....v.v>......>.>vvv.v>v.>>......v.v....>>>>..>>...v>vv>......>>v..v>.>v.>vv..vv..>>>>..v>.v>>.vv...v.>>....v.>>..>>..>....v.v.v
+  >.v>v>.>>..>>>>>v.....>..>...>vvv>....>vv>v>>..vv.v..>.v.>.v.vv..>..>....vv.....vvvv>..v.v....>.>.>>>.>..vvv...>.v....v...>>>..>..v.>>..>..
+  v>..v..v.>v>v.>....vv..>...>..>.v.>>..v.v.>>v.v.v..v...>.>>>v>>..v..v...>.>....vv...v.v>..>v.v......>.>v>v.....v..v...vv.vv..vv..>...>vv.>>
+  >v..v...v>.vv>>>...>..vvvv.>>..>>v..>vv>..>>.>....>.>.....>v>v>>.>>v.v..v.>>v.vv..v..>.>v.>.>>..>>.v>>>vv..>.v...>..vvv.v..v.v.>.>>.v.>.vv.
+  ..v.v.....v.v..>v..>v>vv.>.....>.>v....>vv.v...v..v.>.>>.vv.>...>..>....>..>>>vv....>..>v...vvvvvv>.vv>..v.>v>.>..vv.v.v>>..>v>.>v>.vv.>vv.
+  >.>vv>>>>v....vvv>>.>vv>.vv>>...v..>>vv>...v>.>>v..>...>.....v>.>v.>.>v.>v>v.v.>v.>..>.v>.v...vv.v>>..vv.>>vv.>>.v..>...>>....v.v.>v.v>..>>
+  >v.>>v>v..>>....>.v.>..>.....>.v>v.....vv..v..>...v...>v..v>..>..v.....>.vv>.>.>.>..>.....v>.>v...v.v.vvv>>.>>vv>..>>>.>>.vv>..v.>>.....>..
+  >>.>.>...>...v.>..v.v.v.v.>.>v.>.>v.>..v.v.vv>.v....v.vvv>v.v.....v.v>..v..v..>...>..v.v..>.>>..>>.vvv..>..vv.>.vv......>.>>>>.......vvv.v.
+  .>>>.v.>>..v.>.>....vvvv.vv.v..v>.v.>>v..>...>...>...v.>.....v...v..v..v.....v>...>>>>v>v.>>.v>v>.>..>..>.vv.v.v.>>....>>>...>v>.>..>....vv
+  .v.....v>>.vv>.>>v..>>>..>>.v........>v.v..>.v..>>.vvv......v>..v.v>.v.>.v>v>>.>.vv>...vv...>v..>.......>>v>.....v.>.v.>.....vv>....v.>..v.
+  >vv..v>.>.vvv>......>..v..>..>.vv.vv...>.vvvv.vvvv>>...v.....v..vv>v..v..>.v>.>>>v.>.v...>...v>....v.>..vv....>>>>v....v.v>.v>>.>.>.>vvv.vv
+  ...>v.>>v.>...>..v.vvv>v...>.>>.vvvv.>v.v..vv..v.v>..vv...>.>>>...>..v>>.v.v.>v.......v.v>>..v>..v.v..v.v.v>v.v>......>.v....v.>.>vv......>
+  >>.vv>>..>...v.>>..vv>.v>v.vv.>.v.>v..vv.vv>....>.v.v..v..>v.....>>>>...v..>vv..>..>v.v>.v..v..v>.v..>vvv...>v>>.vvvv>.v>v.>..>.v...v>>v>.>
+  ...v.vv>..>>vv.v.>..v.v...>..>...>>>>...v..>>.....>.....v>...>...>v>.>..v>.vv.v.>.>...>>>.....>.>>v..v.>...>.>.>.v.>v.v>>vv.v>vv....vv.>..v
+  vv>....>.>..vv>.>...>>.v.>v>..>>>.v....vv.>.v.v...v>v.>.>vv>>v.>v>v>.vv...v.>.v>.>>.....>>>..v>..>.....>vv.........>v.>vvv>..v>>...>v...v>.
+  .>>..>..>>.v>v..>.>>..>..v.>>>.v>..>v...>........>v>..>.v>v>v..>...v.v....>..>.>vv.v..>v...v.>>>.>vv..>.v.v.>...>.>>...v..v.v>....>.v..>.>.
+  >..>v>v.v..>vv.v>v..>.>v>v....vv.>.>.>.>.v.>>...v>.>.>.vv>.>.>>>>>v...>..>.v>vv.>>..>>>...v.>v>..v>....>...>>.v.>v.vv..>>>>....vv..vvv.>.>.
+  vvv.>....v>v.v....>>>>.....v>v>v>v.v..>.>v.........v.v.v.vv>v.v....>..v...>...v..>...v.vv..>..v>v..v....vv..>.v..>.>v....v>>..>.>.v.>>.v.>.
+  v....vv>>.v..v.v>.vv..>>>..v.v>..v>.v.>..v..>>>v..>>.v>v>>>>vvv>.v>..v..>>.>v..v>>v......>....>v.vv..>v.v.v......v...v.>.v>.>.>>>>..v>>.v..
+  >.v..v.vv>....>>vvv.vv..vvv.>.vv.>.v.>v.>.v........v.v....vv.v...v.>.v..>...>..vv...v....v.v.v.v>v.>v.vv.v>..v>.v....v>.>>.vv.>.........>.v
+  >>..v.vv..v....>vv.v>vv>v>....>....>v..>..>vv>..>>v>..>v.v>..>v..>v...vvv.>v.v.vv.v....vv..v>vv.>v....>.>>>....vv.v>.vv>>>...v.>v.>>>>>.>.v
+  .v.>....v>.v>>.>>...>vv......v.>...v>>v>.vv.>.>v..vv>>vv.>v>>.v.v....>v.v.>..v>...>.v..v.v>>.>v..>v..>>vv>v.>.>v>v......>v>...>.v.>..>..>.>
+  ..vv.>>>v>>>...vvv.>..v...>v..>>...>v..>vv.>>v.v..>>..v..vv.v..v..>v>v.v....vv..v....>>.......>.v.v..v.>........>.>.>...>v>.>v...v...>.v>>.
+  v.>.....>.v.v>....>vvv..>vv.v>.>vv.vv.>...>vv.v..>v>..>.v.vvvv....>vv......>....v...>.>.v...>.v....>v>...v>.v.....v.v.....vvv>....>...v.>v.
+  v...v.v>>.>.vv..v.........>v.>....v...>...v..>>......v..>.>.>.v>...vvvv....vv..v.....>..>.......>..>.v..>..v>..v>.............v>...>.....v>
+  >.>.vv..>..v>.>>.v>v>>.>..v.....>v>.>.vv.>...v>...>v>...>.v..v>>......>v..>..v>v.v>v>.>v...v>.>..>.v.>.>v>>...v..v.v..>v.vvv>>..>v>>v......
+  >vvv.v.>.v>..v>>>v.>vv.....>v>>>..v...v>>v>>>v>>.>v.v.>v>>vv..>v>>v>...>vv.vv.>...>vv>.v>.v>vv.v.v>...>..vv...v....>..v.>>.v.>>>vvv.v.v...>
+  v..v..vv.v.v.>>..v..>.vvv...>.v.v..v..vv.>v>vv.v.......>v>.v.v.>.vv..v.>vvv>.>>>.vv.>...>>.>....>>>..v...>v.>....>.v.v>vv.v....>v>vv....>v.
+  .v.v.>.v.v>vv.>>.vv>>.v>....v..>vv.vv>......v.>v>...>>..v>..v.>.v.v....>.>vv.v.....>.v.>>.>>.>..>.v..>..>....v....>..>...v>.>>..>.v.vvv..>.
+  vvv.>>>v.v.v>>..>>>>.>.>.v>.v....>.>vvv>>>...v..v>v.......vv>.>.v.v>....>..>.v>v.v.>vv>vvv.v..v.v.v..v....v.>..>v>vv.v>>.......>.>.>.....v>
+  >>.vv>.v>.v.>v..>...vv.v..>>....>>v>.v....>.>v..v...v.vv......vvv.>>..>.>..>.>vv>.>..>.v>>..>....vvv>..v.>.v.>...v..>v..>.v>.>v...vv...>.v>
+  .v>>>.v.vv..>..v>>.>>.....>...vv.v>>.vv>..v>v....vv>.v>....>v....v>>>>.>>>.v>>.>.v.>>.v..v..>>...>..........>>.>>..v..>...v..v>.>v....v.v..
+  .v.>v>>...>>..>>..vv.....v>>>.vv>.v.......vv..v..>>>v..v.>.v..>v.v...>.vv....v>.v.v.>.v.>..>..v.v.>.v.>v.v>vvv>...v..>v>>v..>>....v..>.v.v.
+  v>>v..>>vv..vv.>>...>>..v...vv..v....>.v.v>>.>..v.v..>.v>...v........>v>.v.....v>>..vv......v.v.>.v..>.......vvvvvv..v.v>.v>vv>..v>.>v..v>.
+  .v.>....>.v.>vv>>..>.....>v>.v>.>v.>v...>...>>..v>>>>..v.>..>.>..>>>.>.v>.>>v>.vv>>v..v...>.>v.v>.v...>..v.>..>>v...v>.>v..v>>v..v>v.>v...>
+  .>.>...>.....vv>.>v..vv.>v>v...v>...>>v>>....>v..v>.v>v..v..v>>..v.v........>>.>.v>.....>>v>..>..>....>>...v.>v>vv>>.v.>>..v>...v.v.v.v...>
+  ..v>.>..v>vv.>>..>>>.>v>vv>>v>vvv.v....vvv.v.....>v.>v.vvvv.>>...>.>.....>v.v..v....v>.>>.v.v.v.>vvv>>>v>.....v.v>.....>>......vv.v.>>vv>..
+  vv>....v....v..>>vvvv>.vv.>v..>.>vv>v.........vv>>......>.v>>.v>.v....>v...>>>.>>..v....>>v>v>>v......>v.>..vv.>.v>..>.>..v..>.v>.v.>...v..
+  >>...>..>>>>..v>..vv.>...v.v..v>.v>v>v>v.>>>..>v.v..>v.>vvvv>vv.>v>>....>>..v.v>.v.v....v.>vv>v..>vv.v>>.v.vvv>v>v......>.>..>..vvvv>..v..v
+  >..v....v>>>v>>>.>..>.v.>...v>.>v..vv..>...>vv..vv.......v>>>>v>v>..>v.>...v...v.v......>.....>....>v.>...>>>vv..>.>..>..v.>.>>..>.>v..v.>>
+  v....>...>>>...>........>>>vv.>>v...v..v>..>.v..v>..>.>.v...........>.v..v>>.>>>vv..>>v..>.vvv>vv.v>>.v.>v>.>.>.>>>>.>v..v.>...>.>>>v.>.>v.
+  .v>>.......v.v.v.>v.v.vv...v>>v.v.v.v...v...v...vvv....>.vv>.vv.>....>>..>...>.>.>v>.v...>......v..v>v.vv...v>>.v..>v.>v..>v...>.vv>>..>vvv
+  >>....v..>.v..v>vv.>>...vvvv..v.v..>.>..vv>vv.>.v...v.>v>.vv.v>.>.....vv>v..v.v>>.>...>>..>.>..vv.....v.v.v>.>>.v>>v>>vv.>v>v.v...v....v..v
+  >.....vv>.v>>v.>>>v.v.v.>...v.vv>vvv>vv>v..>...v.>.>.>...>>..>v..>.>.>>v...>...v.vv>v..vv>>>>.v...vvvvv>..>v>.>.v.>..>.vv>>vv......>>.>vv.v
+  ...>.vv....>.>.>v.v.>..>>.v>..>v...>....>.v>..>...>v...v>.>v>>v..>.>.>.>.>....>>vvvv.>>v>.>v>>.>>.>.v.>..>....v....vv.>...>>>..>.>vvv..>>.v
+  .v>..v.v..>.>>.v>vvvvv....v.>.>v.vvvv.v....v.v...>.v>.v>..v>vvv>>...>v>v...>.v>.vv.v>>.v>.>.....>.vv.>>>..>..v>>..>..>.v>v..v......>..>v>..
+  v>>..>v.v.v>...vv.vv.>>>v>..>.v...>..>v...v>>>vv>>>>v.vv.>v>.v.>...>v...>..v....>..vv...v>>....>v......>..>>.>..v>vvvvv...v>..>.>.>.>v.>v..
+  v..vv>>v>..vv..>...v.>.>..>.>..v..vv..vv.vv>.>>.v.....>.>.>.>.v..vv.v.>..v>..vv..v>.vvvv.>...v.....>>vvvv...>v>v>v.vvvv>>.>v.>>vv>......>..
+  >>.>..v..>>.v>.v..>.>...v..v.>.>.v>.>>v>...v.>.>..>>.vvv>>v.>..v...>>..v>vv>.>vv>..>v>..v.>v.v......>>vv>>vvvv.>v>.>.v>vvvv.v.....>....>v.v
+  .>>..v>.v.>.v.v>..v>>...v.>vv.>..v.>>.v>.....>.v.>.>.......>.v..vv..>....v..vv.v.v.>>v.v>..>.vvv.>>..>v...v>v.>>.v.>.>.>..>.>..>..v>.v.>..v
+  .vv>>..>...v..>v......>.vvvv>>v>>.>...>>>.v...v.v..v>.v..v>.v..v>v.>v>.v.>.>>.vv>..v>>.>>>.>.>>...>..v.>v..v>.v>..v>v>vv...>vv....>.vv>..v>
+  ..>v>..>v.>.v>v.>>..>.>.v..vv.>..vv.>..v.v>v.vvv..v>.v>>..v.>.>>.>.>v.>v...v.v...v.>.>....vvvv.v.v.>v.v.v.>v.>vv.v>v.v>..>>v.>>>>..>.>>>...
+  ...>.v>.>.v..v>>.>v>>...>..>...vv.>>v...>v...v>>>..>v..>v.v>.vv>vv..>..>v.>..>>.....>.v.v>.v.v>.v...>.v..v.>.>..v...>v..>.>.>>v.>...>.>...v
+  .......vv....v.>>v>.>.>....>.....>..vv.v....vv>>vv..v..>v..vvv>.v.>v..>>..v.>.>.>......>>..v.>.v....v.v.v>...>...v.v>>>v>>.>.>.vv.....>v>.>
+  ..>..>>.v.v.v>...>.....v>v.>>...vv.>.>..>....v.>.>.>>v.v.v>v...>>.>.v>>..>>....vvvv>>>.vv....>.>.....>v....vv.v.v..v>v...>>.v>vv>v.>>..v>..
+  ......>v.vv...>v.>.v.v...>...v...>>...>v..v.v...vvv.>>....v..v>v....vv>>>>>..>..v.>v>>.>.v>>v.>..>v...>.>.v...>v...vv.v.v.vv>.>...>.v..vv..
+  .>>.>.>.>.vv>>v........v.v.v>.vv..vv...>...>>v.v.>>.vv..v..>..>...>v..vvv.>>.v.vv.v...>>.>>>v.v.>...v.v..>.vv>...v..v.>...>..>v....v.v..>>v
+  >v....>v...vv..v>.v.>v>..v>.>......v....v...v..>v>..>...>.v.>.>>>.>v>>>..v>v>>.v.v.v.v....>v.vv.vv>.>>>>..>.v.v...>.vv>.....v>>..v>..vv.v.>
+  .>v.>.>..v.>>>>.>vv>..vv>v.>.>.>>..>>...v>v>....v..v.>v.v.>.v...vv..v.>.v..>.>.....>.>.>vv>.v.v.v...v..v..>.>v.>>....>..>>v>v.>v..>.v>>>vvv
+  >>vv>...>.>v..v..........>...>..v>........vv..v>v>.v.>>v>>>.>vvv..>..>.>>.....v>.v.v.>.v.v.>>>..>.vvvvv.>>.v.vv>>.v..vv>v...vv>..>.v.>>>>v.
+  .....>..v>.v>>..>...>..>v>>.vv>.>v..>.>>.>v...v>..>.>>..v.v.v.v..>>>.>>v>..v.>..v.v.>>.>>vv..>>....vv.vv>>v..>...>>>...v>....>v.>.vv...>>..
+  ..>.vvv>>.>.>v.>.v>.>>v>.v.....v...v...v..>v.>v.>.>...v.>..v.>v>>>>>.vv.v...>>...>>v.v...>...vv.v.>v>vv....vv>vv>.>>>.>..vv>.v>..>.v.vv.>..
+  >>v...v>.>.vvv>...>.>...vv.>..>vv....v>v...>..v.v.v.v>v....>...>..>.v>>..>.v..>.v......>.>>>>v>...>v>.>>.v>..v.>.vv>>.vvv.>>.>v.>..>.vvv>v.
+  .>.v...v>...>v..vvv>.>...>...v....>>.>.v..v....>>.>....>>..v....>>vvv>vv.vv...>...>.vv...>v...>.vvvv>..>vv>v..v..>>v..>.vv.>...vvv>.....>..
+  .>vv>....>v..vv...>>v>.v...v.>..........>.v>.v..v>.v..vv...v...>>>.>..>..>.>.....>.vv>vv>.>.v..>v>>.vv..>..>vv.vvv.v>....vv.v..v.vv.>v.v.v.
+  >...v.>>>vv.>..>v>vv>....v..vv.>.>.v...vv..>v>...>.>.v>......v..v.v.v>.>.v>.>.v.vvv.>>>.>.v>.vv.v.>v>>v....v>.>.>...vv>>.vv>.v>..>.>...v.v.
+  .v..>v...v..v..>>...>.>...vv..v.....v>>v...>vv..>..v...>.>>v...>>v....vv........>>v>..>>..>.>..vv.>v.vv.v..>v>vv....>....v..>>....vv.v..>v.
+  >vv..>v....>...vvv.v.>v.v..>..>..>...>..>>v>.v..>>>.v.>.>...>vv...>v.>>.vv.>>>>v>.v..>v.v....>.>>v.v....>v..>>>..>.>.v>.>.v>...v..v.>>v>v.v
+  .>>v>.vvvv.>v>.>>.....>....v.........>>>vv>.>v....>.>.>.>..>..>>v..>....v.>>.>.v...vvv>..>..v..>v...vv>.v>v.vvv...vv...>.v....>v.v>>>v...>v
+  .v.vv...>v.>>.>.>..>v.v>vv>>vv.v.v.v>...v....v.>>.>.>.....>.vv.>...>>>.v>..v.>vv>.v>.v.>>v..........v...v>>.v.v.....v..v>.>..>>>>v.>v>.>.>.
+  v...vv..v..>.>.>>v....>...v..>.>.vv.v.>..v....>v.v.>.v.>>v>v>...v.>...v..>v>..v.vv...v...v.vv>v..>.>...>..>.>.v..v>..v.>.v>...v.v..>.vvv>.>
+  ..v...v.v.v..v..vvvvv....>vv..vv..v>..vv.v.v...vv>....v.>vv.vv>vv...>..>>>.v.v.....v...v..>..v...v..>..>>.>>v......>.v...>.v>.>.vv>.v...vv.
+  v..>v.v.v>>..>.....>>>vvv.....>v>.>.>>v.v>v..>v..vv..>>vvv>>>.>vvvvvv>..>v.>..v...v.>...>vv>>v>.vv.>v..v>.vv....>v.vvv>v..v.>>..>....v..>.v
+  >v>.v..v>>..>v.>.....>v..v..vv..>..>>..v..v>...>.>>>.....>>..>>v....>..>..>.....>....>>>.>......>....>.v.v....v.v>.>..v>v.>v.>v>.>....v....
+  .>.v.v...>.vvv>..v>.v..>..>.v.....>v>vv.v.v...v...v>>....v.>.v.v....>....vv>...v.vv>.>v.>>..>>..vv>.>...vv>>v....>..>.....>v..>vv.v........
+  ..v....v...v....vv.>>v.v.vvv..>v..>v.v.vv.vv.v>v>>>...>v.>.v..>.v>>>>..>.>.>v>.v.>..vv.>v.>v.>...>.v.>..v....>vv.v.v..v..v.v>...>>.vv.v.v..
+  ..v...>>vv>vv.>v>..............>v.>>>v..>vvv.>>.>...v.>vv.vv......>.v.>vv.>v.v....v>>>..v.>...>>.v..>v>....vv.v.vv..v.v>vv..v>.vvv>.>>v.>..
+  >v..>.v>..>v..v...>.v...>v>>...>.>v>.>>....>v.>..>v.v>...v..v>v>..>vv>...>....v>...v..v>.v.vv>v>v.v.v..v..>.>v>.>...v.v....>.>.v..v.v>.vv..
+  >.v>v..>..>>v....>v.>v.>.>>.vvv..vv>v.v..>.v>>>>..>..>v.v..v.>.v.>>v.>>.>v>.>>v>...>v..v.>vv..v.v.....v...v>>.v>.>....>v.>vv..>..v>vv...v..
+  .v..>..>vv.>>v.v..v...>.....vvvv.v>....vv.>>...>..>.v.vv.>>>.>>vv.>....vv.vv.v.v..vv.v.v>>.v....>...>v..>>..vvv..v...>v.....>vv..>...v>v...
+  .vv.>.....>..vv>>..>v..>>.>.v..>vv...v...v>v.vv...>.>..>>v>..>>.....>.>..>.v....>>v>..>..>.v.>..vv>........>v.v.>vv.>>.>..v.v>>>v..>>.>.v..
+  >>v.....>...>>v.vv.>.v.v.v.>....>.>v.v...>...>>vvvv>.vv>vv>.>v>>>.vv>..v>...>.vv.v.....vvvvv.>.v>...>....v...v.>>>>>.v.v.>.>..v.vv.>vv.vv.>
+  .>.>.>v>>..vv...v.>.v....>>...>>...vvv>.vvv..>.>..v..>>...>.v..>v....>>.v...v>.v...........v...v.>...>v>...>>vvv>v...v.vv..>.>.v..v.v.>..v>
+  vv....v..v.v>.>>....>>...v..v...v>.v>>..>v.>..>..v>..v>.v>.vv.vv.vvv>v..v...>.vv.>v...vv.>.v..v>...v>..>v.v.>.vv...>>...v>v.v...v>v....>.>>
+  ..>..v>.vv.vv>.>...>.>....v.>.v>....v..>.vv...>....>.>....vvvvv>..>>v.....>vv.v..>..>v.....v.v...>.v>>...>>....>>vvv....>vv....v>v>v.>v>>>.
+  ..v.>>..>>vvv>>>>.>.v>>v.>v>>.v>>>vv.>...>..v.v.v......v.vv.vv>v...>.v.>>vv.>>>.v..vv>v..>>>.vvv.>.v>>..>.>.>>v.>.vv.>v>....>vv..>>.>.>....
+  v.>..v>v.>>>..vv.v.>.>v.v>v>.>.>>.>vvv>>>.>.>v>.....vv....>v...>v.>.>.vv.vv>..v>>>.v.vv>.......v.>.>vv...>>..v>v....v>...v>.....>.v>.vvvv..
+  vv....>>...v..v..>>>v....v.>v>vv.v.>.>.>...v.>v>vv..>>vv>..>...>.v>...v>v...>v>....v.>>v>v..>>vv>>v..>>..v....>..>v.v..v...>.vv.>.>v..>v>>.
+  >v..>..vvv>..>vv>v.>.>.>....v>.....v.v.>vv..>..vvv.>.v>v>..v.>..v.>...v.>>vv>.v.>v.v..v.v.>>>v>v...v..>v>>v>.v...>.vv.v>.>.v.v...v>...>.>>v
+  .>>v>.>..v.>>...>.>.v...>v.v>...>.v.....v..v..v..v.>......>...>....>v.>..v>v>v.v>>.>..v.v>v>...v.>.v.v...v>v.v.....v.....vvv.>>..>>>...>..v
+  v..>v..v.v>.>.v>...>..v....v.....v.>..v>>v.v>v.>>.>v..>.>....v....v....v.>>.....>.v>..>..>vv>..v.>v>v>vvv.>>..v>...vv..v>>v.v.v..v.>.>v.>>.
+  v...v>v....vv>.>>..>>>..v..>v>v..>.vv..v.......>>>vvv..>.....>>.v...v>.v.>.>v.v....>.vv>..>.v.>>vvv>>......v.>....v.v>>..vv>v..>>.v...>>...
+  >.>>>.>v.....v.v>vv..>...>.>v.....>....v..v...v.>.>v>>........v.v..>>..>vv.>>v.v..vv...v>.......v...>>>v.v.v..v.v>>..>.>..>>......vvvv.>>.>
+  v.v.v..v..vvvvv..>.v>.vv...>>.v.....>.......>>vv>..>.>>.>>...>.vv>v>v>v>v.>...v.>.vv>>.>..v..vv>v.>v.v.>v>.v..v>.>..>v...vv>.>......vv>..>>
+  >v>>..>.>.>..v>>v>>.>...>.>.v.>...>..>>>v>.vvvv..v..vvv>vv.>v>>...v....>v.>..>.v..>.>>v..>v>>.>......>vvv....>vv.>v...>.>v.>v.>.v...>vv>v>.
+  v..........>v>.>....v....>>vv.vvv........vv.v.v...>...vv.......>v>.>..v.>.>vv>vv.v..v.v.v..>>.>vv...>>....>>v.v.vv>v..vv>vv...v>.>.v>vv..v.
+  >.v....>vv>v>.vv>v...vvvv...vv>>vv.v>.>.vvvv.v.>.>..>.....>...>..v..v....v>.vv..v......>..v>.......v>v.v.v.>..>v..>>.>...>v.vvv..v....vv.vv
+  >>>v.vv..>v>.v>.vv.>>v...>..>>v>.v..v..v.....>>>..>>>..>.v>v.>..>.>>..>>..>vv.>..v>.v.>...vv>.>...>v>>..>>>>..>vv.>>>..>v..>v.v>...vv.v.>.>
+  ..v.vv>.>>>v..v..v>>v>..>.v.v.v..v...v.v>..v..>....vv.v>v.v>v..v..>v.vvvvv.>.v...>.>.>>>.vvvvv.vv.vvv...v.....v....v......>.....v>vv.vv.v>.
+  v.v..>.v.>v..v.vv>>.vv.>.>....>vvv>..>.>.v..v.>....v.....v>v.v.vv.vv>>v>>..>....>.>.v>.vvv..>.....>v....>.>v.>>..v>>>>>v.>...>..v.v.v.....>
+  >.v.v..>......v.>.>>.v>v>>.vvv>v>....vvv.....>.>.>v>.......>v...>>....v..>>v..>>>.>vvvvv.>.>...v..v>.v...v>..v>...v..>.>vv..v..v.v.>.>.>>vv
+  >.v.v>>v..>>.v.vv....vvv......v....>v>>..v.v..vv.v>v..>v..vv..>>.>>.>v>......v.v.>v....>v.v>.v....>>..>>>v..v>...>v..>..>.>.v..>..>>.......
+  >..>.>.....v>..>...v.vvvv..vvvv.v>.v......v.v....>>v....v.>...>>>....vv...>vv.vv..vvv.>v>.v..>>>.v.v..>....>.v..>.v..vv.v.>..vv...>>v>..vvv
+  .v..v>.v>>v>.>.vvv.....>>.>>.>v..vv>v..v.>.>>.>vv>.v.>.v>..>>..>v......v>>v.v>.>.v..vv..vv...>.vvvv.>v..v.v.>v.>vv.>.vvvvvv.....v.>..>>.v.v
+  vv...>v...>v>v..vv....>.....>>>v..v>>v.v>>..>..v.v.>.>..>.>.>..v..v.v>...>...>.v.v..v>>.v>v.v...v..>.>.v.>>>>v....>..>v>v.v>v.v>.vvvv...>v.
+  .vvv>v.>>>>.>...vv>.v.vv....>...v.v......>>..>>v>....>>..>v.>.>.>>>v.v>vv......vv.>.v..>...v.>>v.>.v.>v..>v..v.>..>.>vv.v.v.v...>....vv....
+  vv.>....vv.v>vv>.v>....v>>......>..vvv..v.vv.>v......>>.......>.vvv>.>..>...>v.v...>v>>..>>>>.v.>.v....>...>.>v>v.>v..>vv>.>.v..>.v......vv
+  v..>>..>.....v>..>.>.v>>v>.>...>vv.>v..vv.v.>v.>>.vv>..v...>>>..v.>v>>>...>.v.>..v.>>vvvv..v.v.v..vv.vvv...v.vv>.v....>....vv.>vv.>........
+  .v>v.vv>>vv>......vv...>>v..v>...>.v...vv...>v>..>..>>>>...>>.vvvv.>...>..v>vv...>..v.>>vv....>.vv..>.>...>......v>>..v>.>..>.>>>.v>>..>.v>
+  v.....>>.>....v>>.>>>>.v>>......vv.>...>vv..v.v..v.>...>...>vv.>.v..>>>.>...vv.v...v>v>....>.vv.....v.....v>.v..v>vv..v>>.>.vv>v....v>>>..>
+  ....>vv>..v>.v>>...>.>>>>>v>>...>..v..>.>..vv>>.>vv.v.v.>.vv.>>..>....>>v>.vv.>.vv.....v>..>v.v.>......>v>.v>>vv.v.>>..v..vvv.>v.vvv>..>v>.
+  .....>.v.>>.>...>.v..>v..>..>>....v.v.vv....v.v..v.>>.v.>..>v>>.>.vvvv>...>v.>v>>.>v.>>v>>...>..v.v.vv....v...v.vvvv>>>>>.v>>v>.....>..v.>v
+  >.vv>..>..>v..>...v>>.>>.>...>v>...v.>v..>...>...v.v.>.>.vv.>.>...>...vv...v.>>>v........vv>>...v.>.>>>v.vv>vv...vv..>..vv>vv...v>>v.v>...v
+  vv..vv>.>..vv..vvv>..v..>.>v>>.>..vv>.v.>>vv..vvv....v..v.v>.vv..>...vv..v....v.v>v>v...v>>.........v..vvvv.vv...vv.>v>..>.>>vvv>>.>..>vv.>
+  >.>>vv>.>v.>>..v.vv..v......>...vv>.v....>..>.>>..>.v..>v.>..>vv.v>...>..v>v>>..>vv..v.v...v.vvvvv>v.....v.v>....>v.vv.v>....v..>vv>v..>.v>
+  v.>v>v.>..v>.v.>.>.........>..vv>.....vv.>.v.>.>v..v.v>......v...v..>..>>.vv...>>.>.vv.>..>......vv.>..v....v...>.>.>v>v.>.>.vv.>>>>.>..>.>
+  .v..vvv>>..v.vv.vv>>....v....v>v.>>>..>>...v...>..>...>>>...>vv.>..>>v..v>.v.>.>.>v>v.>v>>>vvv.v.v>>v....>...>>v.v>>>.v..v.>.>v.v>>v.vvv>>.
+  .>>.v.vv.>v..>.v>.>>....>.......v...vvv>..v.>>v......>..vv>>v.>...>>..>...v......v>vvv..>v....v.v..v..v.v....v>>v.vv.v.>..>>..>.>v>v..v..v>
+  v.v..>>.>..v.v.v.>>v>>v.vv.v......v.v.v.v..v...v....vvvvv>>..>.v.>v.>.>vv>.vv.>>>>....v.>>>v...........v.>...>v.v.vv.>......>.v....>.>.v>..
+  v..>>>>.>.v.>..v..v.....v>>v....v.vv>v>>vvv..>v>v..v...vv.v.vv.>v>.>.>.>>.v.>v..>..>....v>v>>..v.>v......v>..v>...vv>>v.v>vvv>..vv....v.vv.
+  >..>>..>v...v.>..>v>>>..>.v.....v..v.......>v>..>>v.>...v.>.....vv....>>..v...>v..>v>...v.v...>v>.>.v....>...>.......vvv.>v>>..>..>....>>vv
+  v..>...v....>.>vv...v..v>v..>...v.....>..>>.v...v>..>>>>>>>.v.>>>v.vv>..v.v>v>.>v.v.>>..>.....>..>..>>v....v...v.>>>v..vv..vvvv.v.>v>v..vv.
+  .>vv>.>....>.>...>>v...>v....v......>vv.........>>..>>.>vv>...vv.>..>v....>.>v..>v..>.v.v>>v..v>>>.>>....>vvv>..vv..>.>.>>..v..v>.>v..>>vv.
+  .v.....>>vvv....>v>....>..vv.v..>v>.v.....v>v>.vv.v>>v.>.>v>v>.>>..>>vvv.>>.vv.>>.>v.>>>vv..>......>v>>vv.>v.v.v>....v>vv>.>.vv..v>v.>...v.
+  >>>vv....>>..v..v>v..>......>>...>>..>.>>vv.v>>....v>......v....vv..>vv.v>.>..>>.>....>>vv.....vv>.v...vv..>.v.....>>..>..v>.....v>...vv>.v
+  ..>.vv.>.>v....vv>....vvv>.>>>>..>>>.v...>v>>..v>>..v...>.>..v.>..vv>.vv..vv>..v..>...v>vv>vvv...vv.>vv>>>.>v.>>..>.vvv.vv>....>.vvvv.>.>.>
+  >>v.>.>v>..>.>>>..v.v...vvvv>.>..v.>>.>>.v>..>>.v...>>v.>...v..>.>.vv.>>..vvvv.>.v>....v>v>>vv.vvv>>.>.>.v.v>>..v..>..>...>vv.v....>vvv>..v
+  vv.vvv.>.v...>v>v>v.>.v>.v....v.......v>>>>.>...>v.vv>..>>>.v.>v>v>v.v>v>v.v..>v.>v....vv..v>>>vv....>...v>.>v.v>..>v..>.>.>>>....vv>>v>v..
 "3": |-
   000110011011
   010011010000
