--- a/2015/aoc_helper/submissions.yaml
+++ b/2015/aoc_helper/submissions.yaml
@@ -47,6 +47,24 @@
       \ weather machine.You have completed Day 13! You can [Shareon\n  Twitter\nMastodon]\
       \ this victory or [Return to Your Advent Calendar]."
     solution: '668'
+'14':
+  '1':
+    '2660': That's the right answer!  You are one gold star closer to powering the
+      weather machine. [Continue to Part Two]
+    '882': That's not the right answer; your answer is too low.  If you're stuck,
+      make sure you're using the full input data; there are also some general tips
+      on the about page, or you can ask for hints on the subreddit.  Please wait one
+      minute before trying again. (You guessed 882.) [Return to Day 14]
+    solution: '2660'
+  '2':
+    '1256': "That's the right answer!  You are one gold star closer to powering the\
+      \ weather machine.You have completed Day 14! You can [Shareon\n  Twitter\nMastodon]\
+      \ this victory or [Return to Your Advent Calendar]."
+    '1257': That's not the right answer; your answer is too high.  If you're stuck,
+      make sure you're using the full input data; there are also some general tips
+      on the about page, or you can ask for hints on the subreddit.  Please wait one
+      minute before trying again. (You guessed 1257.) [Return to Day 14]
+    solution: '1256'
 '2':
   '1':
     '1588178': That's the right answer!  You are one gold star closer to powering
