--- a/2015/aoc_helper/inputs.yaml
+++ b/2015/aoc_helper/inputs.yaml
@@ -63,6 +63,16 @@
   Mallory would gain 40 happiness units by sitting next to Eric.
   Mallory would gain 18 happiness units by sitting next to Frank.
   Mallory would gain 7 happiness units by sitting next to George.
+"14": |-
+  Vixen can fly 19 km/s for 7 seconds, but then must rest for 124 seconds.
+  Rudolph can fly 3 km/s for 15 seconds, but then must rest for 28 seconds.
+  Donner can fly 19 km/s for 9 seconds, but then must rest for 164 seconds.
+  Blitzen can fly 19 km/s for 9 seconds, but then must rest for 158 seconds.
+  Comet can fly 13 km/s for 7 seconds, but then must rest for 82 seconds.
+  Cupid can fly 25 km/s for 6 seconds, but then must rest for 145 seconds.
+  Dasher can fly 14 km/s for 3 seconds, but then must rest for 38 seconds.
+  Dancer can fly 3 km/s for 16 seconds, but then must rest for 37 seconds.
+  Prancer can fly 25 km/s for 6 seconds, but then must rest for 143 seconds.
 "2": |-
   3x11x24
   13x5x19
