--- a/2015/aoc_helper/submissions.yaml
+++ b/2015/aoc_helper/submissions.yaml
@@ -75,6 +75,16 @@
       \ the weather machine.You have completed Day 15! You can [Shareon\n  Twitter\n\
       Mastodon] this victory or [Return to Your Advent Calendar]."
     solution: '1766400'
+'16':
+  '1':
+    '103': That's the right answer!  You are one gold star closer to powering the
+      weather machine. [Continue to Part Two]
+    solution: '103'
+  '2':
+    '405': "That's the right answer!  You are one gold star closer to powering the\
+      \ weather machine.You have completed Day 16! You can [Shareon\n  Twitter\nMastodon]\
+      \ this victory or [Return to Your Advent Calendar]."
+    solution: '405'
 '2':
   '1':
     '1588178': That's the right answer!  You are one gold star closer to powering
