--- a/2015/aoc_helper/submissions.yaml
+++ b/2015/aoc_helper/submissions.yaml
@@ -105,6 +105,20 @@
       \ weather machine.You have completed Day 18! You can [Shareon\n  Twitter\nMastodon]\
       \ this victory or [Return to Your Advent Calendar]."
     solution: '781'
+'19':
+  '1':
+    '509': That's the right answer!  You are one gold star closer to powering the
+      weather machine. [Continue to Part Two]
+    solution: '509'
+  '2':
+    '141': That's not the right answer; your answer is too low.  If you're stuck,
+      make sure you're using the full input data; there are also some general tips
+      on the about page, or you can ask for hints on the subreddit.  Please wait one
+      minute before trying again. (You guessed 141.) [Return to Day 19]
+    '195': "That's the right answer!  You are one gold star closer to powering the\
+      \ weather machine.You have completed Day 19! You can [Shareon\n  Twitter\nMastodon]\
+      \ this victory or [Return to Your Advent Calendar]."
+    solution: '195'
 '2':
   '1':
     '1588178': That's the right answer!  You are one gold star closer to powering
